# mw-infer

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCUDNN.cmake  FindONNXRuntime.cmake  FindTensorRT.cmake
examples/: CMakeLists.txt  classification_infer.cpp  inspect_model.cc  model_check.cpp  onnx_batch_infer.cc
examples/onnx/: classification_infer.cpp  model_check.cpp  segmentation_fcn_infer.cpp  yolo_nms_infer.cpp  yolo_raw_infer.cpp
examples/tensorrt/: mnist_infer.cpp  yolo_infer.cpp  yolo_nms_infer.cpp
include/mw/infer/: mw_infer.h
include/mw/infer/builder/: build_config.h  builder.h  mw_infer_builder.h
include/mw/infer/common/: device.h  geometry.h  image.h  memory.h  model.h  tensor.h  tensor_allocator.h  types.h
include/mw/infer/runtime/: backend.h  blocks.h  cuda_tensor.h  execution_stream.h  image_batch.h  infer_outputs.h  input.h  model.h  pipeline.h  result.h  runtime_config.h  session.h
include/mw/infer/runtime/adapters/: opencv_cuda_input.h  opencv_geometry.h  opencv_input.h
include/mw/infer/runtime/backend/: backend.h  model.h  onnx_runtime_backend.h
include/mw/infer/runtime/backends/: onnx_runtime_backend.h
include/mw/infer/runtime/input/: input.h  opencv_cuda_input.h  opencv_input.h
include/mw/infer/runtime/pipeline/: pipeline.h
include/mw/infer/runtime/postprocess/: cuda_nms.h  label_map.h  nms.h  segmentation.h  softmax.h  topk.h  yolo_decode.h  yolo_seg_decode.h
include/mw/infer/runtime/process/: channel.h  geometry.h  image_to_tensor.h  normalize.h
include/mw/infer/runtime/tensor/: cuda_tensor.h  gather.h  tensor.h  tensor_allocator.h
src/: CMakeLists.txt
src/builder/: CMakeLists.txt  build_config.cc  builder.cc
src/common/: CMakeLists.txt  device.cc  memory.cc  model.cc  tensor.cc  tensor_allocator.cpp
src/runtime/: CMakeLists.txt  backend.cc  backend_factory.cc  blocks.cc  cuda_blocks.cc  execution_stream.cpp  model.cpp  onnx_infer.cc  runtime_config.cc  session.cc
src/runtime/allocator_adapters/: cuda_tensor_allocator.cpp
src/runtime/backend/: backend.cpp  model.cpp  onnx_backend.cpp  onnx_runtime_backend.cpp  tensorrt_backend.cpp
src/runtime/backends/: backend_registry.h  onnx_cpu_backend.cc  onnx_cuda_backend.cc  onnx_gpu_backend.cc  onnx_runtime_backend.cpp  onnx_runtime_session.cc  onnx_runtime_session.h  tensorrt_backend.cc
src/runtime/input/: opencv_cuda_input.cpp  opencv_input.cpp
src/runtime/postprocess/: cuda_nms.cu  label_map.cc  nms.cpp  nms.cu  nms_internal.h  segmentation.cc  segmentation.cu  softmax.cpp  softmax.cu  topk.cpp  topk.cu  yolo_decode.cpp  yolo_decode.cu  yolo_seg_decode.cc  yolo_seg_decode.cu  yolo_seg_decode_internal.h
src/runtime/process/: channel.cpp  channel.cu  geometry.cpp  image_to_tensor.cpp  image_to_tensor.cu  normalize.cpp  normalize.cu  opencv_cuda_geometry.cpp  opencv_cuda_image_to_tensor.cpp  opencv_geometry.cpp  opencv_image_to_tensor.cpp
src/runtime/tensor/: cuda_tensor.cpp  cuda_tensor_allocator.cpp  gather.cpp  gather.cu  host_tensor_allocator.cpp  tensor_allocator.cpp
tests/: CMakeLists.txt  blocks_test.cc  cuda_tensor_test.cpp  geometry_test.cpp  input_test.cpp  model_test.cpp  onnx_infer_test.cc  onnx_runtime_backend_test.cpp  opencv_blocks_test.cc  opencv_cuda_geometry_test.cpp  opencv_cuda_input_test.cpp  opencv_geometry_test.cpp  opencv_input_test.cpp  pipeline_test.cc  runtime_config_test.cc  tensor_test.cpp
tests/runtime/backend/: model_test.cpp  onnx_backend_test.cpp  onnx_dynamic_image_pipeline_test.cc  tensorrt_backend_test.cpp
tests/runtime/input/: input_test.cpp  opencv_cuda_input_test.cpp
tests/runtime/pipeline/: pipeline_test.cpp
tests/runtime/postprocess/: classification_test.cpp  label_map_test.cc  nms_test.cpp  segmentation_test.cc  yolo_decode_test.cpp  yolo_seg_decode_test.cc
tests/runtime/process/: geometry_test.cpp  image_to_tensor_test.cpp  opencv_cuda_geometry_test.cpp  opencv_cuda_image_to_tensor_test.cpp  opencv_geometry_test.cpp  opencv_image_to_tensor_test.cpp  preprocess_test.cpp
tests/runtime/tensor/: cuda_tensor_allocator_test.cpp  gather_test.cpp  tensor_test.cpp
